--- a/index.html
+++ b/index.html
@@ -4,28 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>IOC CSV Builder — Check Point (Final)</title>
-<style>
-  :root { --bg:#0b0f14; --fg:#e7eef7; --muted:#9fb3c8; --card:#111723; --acc:#3ba0ff;}
-  html,body{height:100%}
-  body{margin:0;background:var(--bg);color:var(--fg);font:14px/1.35 system-ui,Segoe UI,Roboto,Inter,Arial}
-  .wrap{max-width:1100px;margin:0 auto;padding:16px}
-  h1{font-size:20px;margin:16px 0}
-  .grid{display:grid;gap:14px;grid-template-columns: repeat(12,1fr)}
-  .card{background:var(--card);border:1px solid #1b2430;border-radius:12px;padding:12px}
-  .col-6{grid-column: span 6}
-  .col-12{grid-column: span 12}
-  textarea{width:100%;min-height:150px;background:#0a121c;color:var(--fg);border:1px solid #1f2a38;border-radius:8px;padding:10px;resize:vertical}
-  input,select{width:100%;background:#0a121c;color:var(--fg);border:1px solid #1f2a38;border-radius:8px;padding:8px}
-  label{display:block;font-weight:600;margin:6px 0}
-  .row{display:flex;gap:10px;flex-wrap:wrap}
-  .row > *{flex:1 1 180px}
-  button{background:var(--acc);color:#04121f;border:0;border-radius:10px;padding:10px 14px;font-weight:700;cursor:pointer}
-  button:disabled{opacity:.6;cursor:not-allowed}
-  .kbd{border:1px solid #2b3b52;border-bottom-width:2px;border-radius:6px;padding:0 6px;background:#0a121c}
-  .counter{font-size:12px;color:#9fb3c8;margin-top:4px}
-  .hint{font-size:12px;color:#9fb3c8;margin-top:6px}
-  .warn{color:#ffd479;margin-top:6px}
-</style>
+<link rel="stylesheet" href="app.css">
 </head>
 <body>
 <div class="wrap">
