--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>IOC CSV Builder <span class="pill">Check&nbsp;Point</span></h1>
+    <h1>IOC CSV Builder <span class="pill">CheckPoint</span></h1>
 
     <div class="grid">
       <div class="card col-12">
@@ -286,5 +286,6 @@
   });
 })();
 </script>
+<script src="app.js"></script>
 </body>
 </html>
