--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </div>
 
       <div class="card col-6">
-        <label for="ips">IPs (una por línea)</label>
+        <label for="ips">IPs</label>
         <textarea id="ips" placeholder="83.150.218.93&#10;203.0.113.10"></textarea>
       </div>
 
